# cub

./: CMakeLists.txt  Makefile  main.c
includes/: cub3d.h
map_examples/: default.cub  errors.cub  gay.cub  hello.cub
mlx_drawer/: bmp.c  draw_sprite.c  draw_walls.c  exit.c  mlx_utils.c  move_player.c  move_player_utils.c  open_window.c  raycast.c  sprite_utils.c  window_creation.c
parser/: check_arguments.c  errors.c  flag_parser.c  flag_parser_utils.c  map_to_mass.c  map_to_mass_utils.c  parser.c  wall_check.c
texture_examples/: 1.xpm  2.xpm  3.xpm  4.xpm  ace.xpm  gene.xpm  gt.XPM  gtr.XPM  guitar.xpm  paul.xpm  peter.xpm
